# gestao-acervo

./: .env.example  .gitignore  AGENTS.md  ANALISE_CONFORMIDADE.md  CLAUDE.md  INSTRUCTIONS.md  Makefile  README.md  SETUP_COMPLETO.md  WORKER_INSTRUCTIONS.md  instrucoes-agente-codex-bootstrap-v2.md  pyproject.toml
.archive/: QUICKSTART.md
.archive/docs-bootstrap/: WORKFLOW_LADO_PO_STEP_BY_STEP.md  model-routing.md  review-next-step.md
.claude/: settings.json  settings.local.json
.claude/agents/: reviewer.md  wi002-selective-update.md  wi003-matching.md
.claude/commands/: prime-context.md
.claude/rules/: 01-python-style.md  02-testing-patterns.md  03-db-conventions.md  04-domain-rules.md  05-agent-workflow.md
.claude/session-memory/config/: template.md
.githooks/: pre-commit  pre-push
app/: streamlit_app.py
data/samples/: logos10_matching_sample.csv  logos10_sample.csv  logos7_matching_sample.csv  logos7_sample.csv  mock_source.csv
docs/: LESSONS_LEARNED.md  MATURITY_CRITERIA.md  PACKAGE_NOTES.md  STATUS.md  WORK_ITEMS.md  architecture.md  conformidade.md  decisions.md  prd.md  workflow.md
docs/formats/: logos_csv.md
scripts/: install-hooks.sh
src/catalogo_acervo/: __init__.py
tests/: conftest.py
tests/integration/: test_import_and_search.py  test_import_from_source_pipeline.py  test_logos_csv_import.py  test_logos_csv_matching_smoke.py
tests/unit/: test_aliasing.py  test_catalog_item_repository.py  test_import_semantics.py  test_logos_csv_parser.py  test_match_repository.py  test_match_score.py  test_mock_parser.py  test_normalization.py  test_parser_protection.py  test_parser_registry.py  test_property_alias_precedence.py  test_property_fts5_safety.py  test_property_import.py  test_property_match_dedup.py  test_property_match_idempotence.py  test_property_parser_protection.py  test_property_source_key.py  test_search_sanitize.py  test_source_key_extraction.py  test_suggest_matches_incremental.py  test_use_cases_basic.py
(+55 files in other folders)
