[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalogo-acervo"
version = "0.1.0"
description = "Bootstrap do Catálogo Unificado de Acervo (local-first)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.40",
  "pydantic>=2.9",
  "rapidfuzz>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
